updates event agenda and speakers section

--- a/apps/pattern-lab/src/_patterns/04-pages/80-events/event-detail.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/80-events/event-detail.twig
@@ -118,110 +118,85 @@
           <hr>        
           {% grid "u-bolt-margin-bottom-medium" %}   
             {% cell 'u-bolt-width-2/8@medium' %}
-              {% include "@bolt/text.twig" with {
-                text: "11:00 - 12:00 pm"
-              } only %}
+              <p>11:00 - 12:00 pm</p>
             {% endcell %}
 
             {% cell 'u-bolt-width-5/8@medium' %}
-              {% include "@bolt/text.twig" with {
-                text: "Registration"
-              } only %}
+              <p>Registration</p>
             {% endcell %}
 
             {% cell 'u-bolt-width-1/8@medium' %}
               {% include "@bolt-components-icon/icon.twig" with {
                 name: "add-open",
-                background: "circle",
-                size: xlarge
+                size: "large"
               } only %}
             {% endcell %}
           {% endgrid %}
           <hr>
           {% grid "u-bolt-margin-bottom-medium" %}
             {% cell 'u-bolt-width-2/8@medium' %}
-              {% include "@bolt/text.twig" with {
-                text: "11:00 - 12:00 pm"
-              } only %}
+              <p>11:00 - 12:00 pm</p>
             {% endcell %}
 
             {% cell 'u-bolt-width-5/8@medium' %}
-              {% include "@bolt/text.twig" with {
-                text: "Networking Lunch"
-              } only %}
+              <p>Networking Lunch</p>
             {% endcell %}
 
             {% cell 'u-bolt-width-1/8@medium' %}
               {% include "@bolt-components-icon/icon.twig" with {
                 name: "add-open",
-                background: "circle",
-                size: xlarge
+                size: "large"
               } only %}
             {% endcell %}
           {% endgrid %}
           <hr>
           {% grid "u-bolt-margin-bottom-medium" %}
             {% cell 'u-bolt-width-2/8@medium' %}
-              {% include "@bolt/text.twig" with {
-                text: "11:00 - 12:00 pm"
-              } only %}
+              <p>11:00 - 12:00 pm</p>
             {% endcell %}
 
             {% cell 'u-bolt-width-5/8@medium' %}
-              {% include "@bolt/text.twig" with {
-                text: "Welcome & Keynote"
-              } only %}
+              <p>Welcome & Keynote</p>
             {% endcell %}
 
             {% cell 'u-bolt-width-1/8@medium' %}
               {% include "@bolt-components-icon/icon.twig" with {
                 name: "add-open",
-                background: "circle",
-                size: xlarge
+                size: "large"
               } only %}
             {% endcell %}
           {% endgrid %}
           <hr>
           {% grid "u-bolt-margin-bottom-medium" %}
             {% cell 'u-bolt-width-2/8@medium' %}
-              {% include "@bolt/text.twig" with {
-                text: "11:00 - 12:00 pm"
-              } only %}
+              <p>11:00 - 12:00 pm</p>
             {% endcell %}
 
             {% cell 'u-bolt-width-5/8@medium' %}
-              {% include "@bolt/text.twig" with {
-                text: "Customer Engagement Program: Panel Discussion, Demos, Presentations"
-              } only %}
+              <p>Customer Engagement Program: Panel Discussion, Demos, Presentations</p>
             {% endcell %}
 
             {% cell 'u-bolt-width-1/8@medium' %}
               {% include "@bolt-components-icon/icon.twig" with {
                 name: "add-open",
-                background: "circle",
-                size: xlarge
+                size: "large"
               } only %}
             {% endcell %}
           {% endgrid %}
           <hr>
           {% grid "u-bolt-margin-bottom-medium" %}
             {% cell 'u-bolt-width-2/8@medium' %}
-              {% include "@bolt/text.twig" with {
-                text: "11:00 - 12:00 pm"
-              } only %}
+              <p>11:00 - 12:00 pm</p>
             {% endcell %}
 
             {% cell 'u-bolt-width-5/8@medium' %}
-              {% include "@bolt/text.twig" with {
-                text: "Networking Reception"
-              } only %}
+              <p>Networking Reception</p>
             {% endcell %}
 
             {% cell 'u-bolt-width-1/8@medium' %}
               {% include "@bolt-components-icon/icon.twig" with {
                 name: "add-open",
-                background: "circle",
-                size: xlarge
+                size: "large"
               } only %}
             {% endcell %}
           {% endgrid %}
@@ -343,9 +318,7 @@
               size: "large",
               tag: "h3"
             } only %}
-            {% include "@bolt/text.twig" with {
-              text: "Executive Director, My Company",
-            } only %}         
+            <p>Executive Director, My Company</p>
             {% include "@bolt-components-link/link.twig" with {
               text: "Show more",
               url: "#",
@@ -367,9 +340,7 @@
               size: "large",
               tag: "h3"
             } only %}
-            {% include "@bolt/text.twig" with {
-              text: "Executive Director, My Company",
-            } only %}         
+            <p>Executive Director, My Company</p>
             {% include "@bolt-components-link/link.twig" with {
               text: "Show more",
               url: "#",
@@ -391,9 +362,7 @@
               size: "large",
               tag: "h3"
             } only %}
-            {% include "@bolt/text.twig" with {
-              text: "Executive Director, My Company",
-            } only %}         
+            <p>Executive Director, My Company</p>
             {% include "@bolt-components-link/link.twig" with {
               text: "Show more",
               url: "#",
@@ -415,9 +384,7 @@
               size: "large",
               tag: "h3"
             } only %}
-            {% include "@bolt/text.twig" with {
-              text: "Executive Director, My Company",
-            } only %}         
+            <p>Executive Director, My Company</p>
             {% include "@bolt-components-link/link.twig" with {
               text: "Show more",
               url: "#",
@@ -439,9 +406,7 @@
               size: "large",
               tag: "h3"
             } only %}
-            {% include "@bolt/text.twig" with {
-              text: "Executive Director, My Company",
-            } only %}         
+            <p>Executive Director, My Company</p>
             {% include "@bolt-components-link/link.twig" with {
               text: "Show more",
               url: "#",
@@ -463,9 +428,7 @@
               size: "large",
               tag: "h3"
             } only %}
-            {% include "@bolt/text.twig" with {
-              text: "Executive Director, My Company",
-            } only %}         
+            <p>Executive Director, My Company</p>
             {% include "@bolt-components-link/link.twig" with {
               text: "Show more",
               url: "#",
