refactor: UI cleanup + fixes

--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/01-dropdown-custom-element--collapse--center.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/01-dropdown-custom-element--collapse--center.twig
@@ -1,7 +1,7 @@
 <bolt-dropdown
   center
   collapse
-  toggle-text="{{ toggleText | default("Toggle Dropdown") }}"
+  title="Custom Element w/ Collapse & Center"
   >
 
   <bolt-nav-list offset="50">
