--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/01-dropdown-custom-element--collapse--xdark.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/01-dropdown-custom-element--collapse--xdark.twig
@@ -2,7 +2,7 @@
 
   <bolt-dropdown
     collapse
-    toggle-text="{{ toggleText | default("Toggle Dropdown") }}"
+    title="Custom Element w/ Collapse + Dark Theme"
     >
 
     <bolt-nav-list offset="50">
