--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/01-dropdown-custom-element.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/01-dropdown-custom-element.twig
@@ -1,6 +1,6 @@
 <bolt-dropdown
   center
-  toggle-text="{{ toggleText | default("Toggle Dropdown") }}"
+  title="Vanilla Custom Element"
   >
 
   <bolt-nav-list offset="50">
@@ -25,6 +25,12 @@
       <li class="c-bolt-nav-list__item">
         <bolt-nav-link>
           <a class="c-bolt-nav-link" href="#p-6618d817-126e-46d1-955a">Customer Success
+          </a>
+        </bolt-nav-link>
+      </li>
+      <li class="c-bolt-nav-list__item">
+        <bolt-nav-link>
+          <a class="c-bolt-nav-link" href="#long-link">Menu item that is really long and breaks after 32ish characters
           </a>
         </bolt-nav-link>
       </li>
