--- a/packages/components/bolt-headline/src/_typography.twig
+++ b/packages/components/bolt-headline/src/_typography.twig
@@ -66,6 +66,12 @@
 {% endif %}
 
 <{{ tag }} {{ attributes.addClass(classes) }}>
+  {% if icon and not url and icon.position == "left" %}
+    <span class="{{ "#{baseClass}__icon" }}">
+      {% include "@bolt/icon.twig" with icon only %}
+    </span>
+  {% endif %}
+
   <span class="{{ "#{baseClass}__text" }}">
     {% if url %}
       {% include "@bolt/link.twig" with {
@@ -79,7 +85,7 @@
     {% endif %}
   </span>
 
-  {% if icon and not url %}
+  {% if icon and not url and icon.position != "left" %}
     <span class="{{ "#{baseClass}__icon" }}">
       {% include "@bolt/icon.twig" with icon only %}
     </span>
