--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/01-dropdown-custom-element--long-header-text.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/01-dropdown-custom-element--long-header-text.twig
@@ -1,7 +1,22 @@
 <bolt-dropdown
-  collapse
-  title="{{ title | default("Toggle Dropdown") }}"
-  >
+  center
+  title='{{ include("@bolt-components-headline/text.twig", {
+    text: "Really Extremely Long Example Header Text Example",
+    tag: "h2",
+    size: "medium",
+    weight: "semibold",
+    icon: {
+      name: "hospitality",
+      size: "medium",
+      position: "left"
+    },
+    attributes: {
+      "slot": "title",
+      "class": [
+        "u-bolt-margin-bottom-none"
+      ]
+    }
+  }, with_context = false)|json_encode()  }}'>
 
   <bolt-nav-list offset="50">
     <ul class="c-bolt-nav-list c-bolt-nav-list--xsmall js-bolt-nav-list-gumshoe">
@@ -25,6 +40,12 @@
       <li class="c-bolt-nav-list__item">
         <bolt-nav-link>
           <a class="c-bolt-nav-link" href="#p-6618d817-126e-46d1-955a">Customer Success
+          </a>
+        </bolt-nav-link>
+      </li>
+      <li class="c-bolt-nav-list__item">
+        <bolt-nav-link>
+          <a class="c-bolt-nav-link" href="#long-link">Menu item that is really long and breaks after 32ish characters
           </a>
         </bolt-nav-link>
       </li>
