--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/dropdown.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/dropdown.twig
@@ -1,36 +1,41 @@
-{% embed "@bolt-components-dropdown/01-dropdown.twig" with {
-  title: "Toggle Menu"
+{% include "@bolt-components-dropdown/dropdown.twig" with {
+  title: "Example Title",
+  content: include("@bolt-components-nav-list/nav-list.twig", {
+    "links": [
+      {
+        "text": "Link 1 Text",
+        "url": "#link-1-url"
+      },
+      {
+        "text": "Link 2 Text",
+        "url": "#link-2-url"
+      },
+      {
+        "text": "Link 3 Text",
+        "url": "#link-3-url"
+      },
+       {
+        "text": "Link 4 Text",
+        "url": "#link-4-url"
+      },
+      {
+        "text": "Link 5 Text",
+        "url": "#link-5-url"
+      },
+      {
+        "text": "Link 6 Text",
+        "url": "#link-6-url"
+      },
+       {
+        "text": "Link 7 Text",
+        "url": "#link-7-url"
+      },
+      {
+        "text": "Link 8 Text",
+        "url": "#link-8-url"
+      }
+    ]
+  })
 } %}
-  {% block content %}
-    <bolt-nav-list offset="50">
-      <ul class="c-bolt-nav-list c-bolt-nav-list--xsmall js-bolt-nav-list-gumshoe">
-        <li class="c-bolt-nav-list__item">
-          <bolt-nav-link>
-            <a class="c-bolt-nav-link" href="#p-f3ff267c-5fb8-4e2f-8682-52663b5437df">Features</a>
-          </bolt-nav-link>
-        </li>
-        <li class="c-bolt-nav-list__item">
-          <bolt-nav-link>
-            <a class="c-bolt-nav-link" href="#p-12de80d7-1c57-4bef-a173-07d898f8e356">Resources
-            </a>
-          </bolt-nav-link>
-        </li>
-        <li class="c-bolt-nav-list__item">
-          <bolt-nav-link>
-            <a class="c-bolt-nav-link" href="#p-468a47c1-fe65-46d4-b8c7-9dbfe8404ee9">Industry Apps
-            </a>
-          </bolt-nav-link>
-        </li>
-        <li class="c-bolt-nav-list__item">
-          <bolt-nav-link>
-            <a class="c-bolt-nav-link" href="#p-6618d817-126e-46d1-955a-f7ee78e79475">Customer Success
-            </a>
-          </bolt-nav-link>
-        </li>
-        <li class="c-bolt-nav-list__indicator js-bolt-nav-indicator" style="transform: translateX(0px); width: 0px;"></li>
-      </ul>
-    </bolt-nav-list>
-  {% endblock %}
-{% endembed %}
 
 
