--- a/packages/components/bolt-dropdown/_dropdown-item.twig
+++ b/packages/components/bolt-dropdown/_dropdown-item.twig
@@ -1,40 +1,25 @@
-
 {% set uuid = random() %}
+{% set primaryUUID = "c-bolt-dropdown-item-#{uuid}" %}
+{% set secondaryUUID = "c-bolt-dropdown-item-inner-#{uuid}" %}
 
-{% set primaryUUID = "c-bolt-dropdown-#{uuid}" %}
-{% set secondaryUUID = "c-bolt-dropdown-inner-#{uuid}" %}
-
-{% set autoOpen = autoOpen | default(false) %}
-{% set collapse = collapse | default(false) %}
-
-
-<bolt-dropdown
-  auto-open="{{ autoOpen ? "true" : "false"}}"
-  {{ collapse ? "collapse" : "" }}
-  {{ center ? "center" : "" }}
-  primary-uuid="{{ primaryUUID }}"
-  secondary-uuid="{{ secondaryUUID }}"
-  toggle-text="{{ toggleText | default("Toggle Dropdown") }}"
-  ssr-content='{{ content|json_encode() }}'
-  >
+<bolt-dropdown-item>
   <input class="c-bolt-dropdown__state" type="checkbox" id="{{ primaryUUID }}" {% if autoOpen %} checked{% endif %}>
 
   <div class="c-bolt-dropdown {{ collapse ? "c-bolt-dropdown--collapse@small" : "" }}" id="{{ secondaryUUID }}">
 
     <h3 class="c-bolt-dropdown__header {% if center and center == true %}c-bolt-dropdown__header--center{% endif %}">
       <label class="c-bolt-dropdown__header-label" for="{{ primaryUUID }}">
-        {{ toggleText | default("Toggle Dropdown")}}
+        {{ title | default("Toggle Dropdown")}}
       </label>
 
       <a href="#{{ secondaryUUID }}" class="c-bolt-dropdown__header-link c-bolt-dropdown__header-link c-bolt-dropdown__header-link--open">
-        <span class="c-bolt-dropdown__toggle-text">{{ openText | default("Open Dropdown")}}</span>
+        <span class="c-bolt-dropdown__toggle-text">{{ openLabel | default("Open Dropdown")}}</span>
       </a>
 
       <a href="#{{ primaryUUID }}" class="c-bolt-dropdown__header-link c-bolt-dropdown__header-link--close">
-        <span class="c-bolt-dropdown__toggle-text">{{ closeText | default("Close Dropdown")}}</span>
+        <span class="c-bolt-dropdown__toggle-text">{{ closeLabel | default("Close Dropdown")}}</span>
       </a>
     </h3>
-
 
     <div class="c-bolt-dropdown__content">
       <div class="c-bolt-dropdown__content-inner">
@@ -42,4 +27,4 @@
       </div>
     </div>
   </div>
-</bolt-dropdown>
+</bolt-dropdown-item>
