--- a/packages/components/bolt-nav-bar/src/nav-bar.twig
+++ b/packages/components/bolt-nav-bar/src/nav-bar.twig
@@ -98,43 +98,14 @@
     {% block band_content %}
       <nav class="c-bolt-nav-bar">
         {% if title %}
-          <div class="c-bolt-nav-bar__title">
-            <div class="c-bolt-nav-bar__title-item">
-              {% include "@bolt/icon.twig" with {
-                "name": title.icon.name,
-                "size": "large"
-              } only %}
-            </div>
-            <div class="c-bolt-nav-bar__title-item">
-              {% include "@bolt/text.twig" with {
-                "size": "large",
-                "weight": "semibold",
-                "tag": title.tag,
-                "text": title.text
-              } only %}
-            </div>
+          {% include "@bolt-components-nav-bar/nav-bar__title.twig" with title only %}
+        {% endif %}
+
+        {% if links %}
+          <div class="c-bolt-nav-bar__nav">
+            {% include "@bolt-components-nav-list/nav-list.twig" with links only %}
           </div>
         {% endif %}
-        <div class="c-bolt-nav-bar__nav">
-          <bolt-nav-list
-              {% if headerOffset %} offset="{{ headerOffset }}" {% endif %}
-          >
-            <ul class="c-bolt-nav-list {{ "c-bolt-nav-list--#{vspacing}" }} js-bolt-nav-list-gumshoe">
-              {% for item in links %}
-                <li class="c-bolt-nav-list__item">
-                  <bolt-nav-link>
-                    {% set itemAttributes = create_attribute(item.attributes | default({})) %}
-                    {% set itemAttributes = itemAttributes.addClass("c-bolt-nav-link").setAttribute("href", item.url) %}
-                    <a {{ itemAttributes }}>
-                      {{ item.text }}
-                    </a>
-                  </bolt-nav-link>
-                </li>
-              {% endfor %}
-              <li class="c-bolt-nav-list__indicator js-bolt-nav-indicator"></li>
-            </ul>
-          </bolt-nav-list>
-        </div>
       </nav>
     {% endblock %}
 
