OG Share Meta Data -- Quick change to trigger build

--- a/apps/pattern-lab/src/_meta/_00-head.twig
+++ b/apps/pattern-lab/src/_meta/_00-head.twig
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
 
-    <!-- Default OG Tag examples -->
+    <!--- Default OG Tag examples --->
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Bolt Design System: Page Title" />
     <meta property="og:description" content="Sample description" />
@@ -15,7 +15,7 @@
     <meta property="og:url" content="http://bolt-design-system.com/" />
     <meta property="og:site_name" content="Bolt Design System" />
 
-    <!-- Twitter specific meta tags -->
+    <!--- Twitter specific meta tags --->
     <meta name="twitter:title" content="Bolt Design System: Page Title">
     <meta name="twitter:description" content="Sample description">
     <meta name="twitter:image" content="https://bolt-design-system.com/images/500x500-480.jpg">
