--- a/apps/pattern-lab/src/_meta/_00-head.twig
+++ b/apps/pattern-lab/src/_meta/_00-head.twig
@@ -11,18 +11,17 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Bolt Design System: Page Title" />
     <meta property="og:description" content="Sample description" />
-    <meta property="og:image" content="http://bolt-design-system.com/images/500x500-480.jpg" />
-    <meta property="og:image:secure_url" content="https://bolt-design-system.com/images/500x500-480.jpg" />
+    <meta property="og:image" content="https://bolt-design-system.com/images/500x500-480.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="480" />
     <meta property="og:image:height" content="480" />
-    <meta property="og:url" content="http://bolt-design-system.com/some-page-title-here" />
+    <meta property="og:url" content="https://bolt-design-system.com/some-page-title-here" />
     <meta property="og:site_name" content="Bolt Design System" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="Bolt Design System: Page Title">
-    <meta name="twitter:description" content="Sample description">
-    <meta name="twitter:image" content="https://bolt-design-system.com/images/500x500-480.jpg">
-    <meta name="twitter:site" content="@pega">
+    <meta name="twitter:title" content="Bolt Design System: Page Title" />
+    <meta name="twitter:description" content="Sample description" />
+    <meta name="twitter:image" content="https://bolt-design-system.com/images/500x500-480.jpg" />
+    <meta name="twitter:site" content="@pega" />
 
     <link rel="stylesheet" href="{{ assets["bolt-global.css"] }}?cachebuster="{{ cacheBuster }}" media="all" />
 
