fix: update theme of first event detail band

--- a/apps/pattern-lab/src/_patterns/04-pages/80-events/event-detail.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/80-events/event-detail.twig
@@ -8,7 +8,7 @@
 
   {% embed "@bolt/band.twig" with {
     size: "medium",
-    theme: "xdark"
+    theme: "dark"
   } only %}
     {% block band_content  %}
     {% grid "o-bolt-grid--flex o-bolt-grid--large o-bolt-grid--middle o-bolt-grid--matrix" %}
