fix: Update color and size of event agenda icons

--- a/apps/pattern-lab/src/_patterns/04-pages/80-events/event-detail.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/80-events/event-detail.twig
@@ -126,10 +126,12 @@
             {% endcell %}
 
             {% cell 'u-bolt-width-1/8@medium' %}
-              {% include "@bolt-components-icon/icon.twig" with {
-                name: "add-open",
-                size: "large"
-              } only %}
+              <div class="u-bolt-color-indigo-light">
+                {% include "@bolt-components-icon/icon.twig" with {
+                  name: "add-open",
+                  size: "medium"
+                } only %}
+              </div>
             {% endcell %}
           {% endgrid %}
           <hr>
@@ -143,10 +145,12 @@
             {% endcell %}
 
             {% cell 'u-bolt-width-1/8@medium' %}
-              {% include "@bolt-components-icon/icon.twig" with {
-                name: "add-open",
-                size: "large"
-              } only %}
+              <div class="u-bolt-color-indigo-light">
+                {% include "@bolt-components-icon/icon.twig" with {
+                  name: "add-open",
+                  size: "medium"
+                } only %}
+              </div>
             {% endcell %}
           {% endgrid %}
           <hr>
@@ -160,10 +164,12 @@
             {% endcell %}
 
             {% cell 'u-bolt-width-1/8@medium' %}
-              {% include "@bolt-components-icon/icon.twig" with {
-                name: "add-open",
-                size: "large"
-              } only %}
+              <div class="u-bolt-color-indigo-light">
+                {% include "@bolt-components-icon/icon.twig" with {
+                  name: "add-open",
+                  size: "medium"
+                } only %}
+              </div>
             {% endcell %}
           {% endgrid %}
           <hr>
@@ -177,10 +183,12 @@
             {% endcell %}
 
             {% cell 'u-bolt-width-1/8@medium' %}
-              {% include "@bolt-components-icon/icon.twig" with {
-                name: "add-open",
-                size: "large"
-              } only %}
+              <div class="u-bolt-color-indigo-light">
+                {% include "@bolt-components-icon/icon.twig" with {
+                  name: "add-open",
+                  size: "medium"
+                } only %}
+              </div>
             {% endcell %}
           {% endgrid %}
           <hr>
@@ -194,10 +202,12 @@
             {% endcell %}
 
             {% cell 'u-bolt-width-1/8@medium' %}
-              {% include "@bolt-components-icon/icon.twig" with {
-                name: "add-open",
-                size: "large"
-              } only %}
+              <div class="u-bolt-color-indigo-light">
+                {% include "@bolt-components-icon/icon.twig" with {
+                  name: "add-open",
+                  size: "medium"
+                } only %}
+              </div>
             {% endcell %}
           {% endgrid %}
           <hr>
