--- a/apps/pattern-lab/src/_patterns/04-pages/80-events/event-detail.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/80-events/event-detail.twig
@@ -218,6 +218,18 @@
         {% endcell %}
 
         {% cell 'u-bolt-width-1/1 u-bolt-width-1/3@medium' %}
+
+          {% include "@bolt/_event-annotation.twig" with {
+            text: 'The finished page should be different from what is shown here in the following ways (consider the <a class="c-bolt-link" href="https://pega.invisionapp.com/d/main#/projects/prototypes/13581279">Invision comps</a> canonical in these respects): <br/>
+            * It should have an optional negative top margin to overlay the band above it<br/>
+            * At mobile breakpoints, the form should overlay the whole screen'
+          } only %}
+
+          {% include "@bolt/_event-annotation.twig" with {
+            text: 'Styling details of the form fields such as font size may appear slightly different.  That should
+            not be reason to fail this during QA - the correct sizes will be pulled in when the site is updated to use the latest 1.x version of Bolt.'
+          } only %}
+
           {% embed "@bolt/card.twig" with {
             theme: "light",
           } only %}
@@ -365,6 +377,13 @@
               text: "Show more",
               url: "#",
             } only %}
+
+            {% include "@bolt/_event-annotation.twig" with {
+              text: 'The "show more" link should open details in a modal.  Use
+                <a class="c-bolt-link" href="https://pega.invisionapp.com/d/main#/console/13581279/283315541/preview">this Invision comp</a>
+                as the source of truth for that modal.'
+            } only %}
+
           {% endcell %}      
         {% endgrid %}
       {% endcell %}
