docs: Tweak link in annotations (WWWD-1553)

--- a/apps/pattern-lab/src/_patterns/04-pages/80-events/event-landing.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/80-events/event-landing.twig
@@ -277,7 +277,7 @@
 
           {% include "@bolt/_event-annotation.twig" with {
             text: 'At mobile breakpoints, search facets should appear in an overlay.  This page does not show that
-            behavior.  See <a href="http://5a8474d2be40f13bcfebaa78.bolt.netlify.com/patterns/04-pages-d8-partners-d8-partners-search/04-pages-d8-partners-d8-partners-search.html">this temporary page</a> for an example'
+            behavior.  See <a class="c-bolt-link" target="_blank" href="http://5a8474d2be40f13bcfebaa78.bolt.netlify.com/patterns/04-pages-d8-partners-d8-partners-search/04-pages-d8-partners-d8-partners-search.html">this temporary page</a> for an example'
           } only %}
 
           {% include "@bolt/_event-annotation.twig" with {
