Ensuring all validation errors are passed through raw filter

--- a/packages/components/bolt-band/src/band.twig
+++ b/packages/components/bolt-band/src/band.twig
@@ -65,5 +65,5 @@
 </bolt-{{ componentName }}>
 
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-band/band.schema.yml', _self) }}
+  {{ validate_data_schema('@bolt-components-band/band.schema.yml', _self) | raw }}
 {% endif %}
