--- a/packages/components/bolt-button/src/button.twig
+++ b/packages/components/bolt-button/src/button.twig
@@ -127,5 +127,5 @@
 </bolt-button>
 
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-button/button.schema.yml', _self) }}
+  {{ validate_data_schema('@bolt-components-button/button.schema.yml', _self) | raw }}
 {% endif %}
