--- a/packages/components/bolt-share/src/share.twig
+++ b/packages/components/bolt-share/src/share.twig
@@ -52,5 +52,5 @@
 </bolt-share>
 
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-share/share.schema.yml', _self) }}
+  {{ validate_data_schema('@bolt-components-share/share.schema.yml', _self) | raw }}
 {% endif %}
