--- a/packages/components/bolt-blockquote/src/blockquote.twig
+++ b/packages/components/bolt-blockquote/src/blockquote.twig
@@ -123,5 +123,5 @@
 </bolt-{{ componentName }}>
 
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-blockquote/blockquote.schema.yml', _self) }}
+  {{ validate_data_schema('@bolt-components-blockquote/blockquote.schema.yml', _self) | raw }}
 {% endif %}
