--- a/packages/components/bolt-card/src/card.twig
+++ b/packages/components/bolt-card/src/card.twig
@@ -179,5 +179,5 @@
 </bolt-card>
 
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema(schema, _self) }}
+  {{ validate_data_schema(schema, _self) | raw }}
 {% endif %}
