--- a/packages/components/bolt-chip-list/chip-list.twig
+++ b/packages/components/bolt-chip-list/chip-list.twig
@@ -45,5 +45,5 @@
 {% endif %}
 
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-chip-list/chip-list.schema.yml', _self) }}
+  {{ validate_data_schema('@bolt-components-chip-list/chip-list.schema.yml', _self) | raw }}
 {% endif %}
