--- a/packages/components/bolt-figure/src/figure.twig
+++ b/packages/components/bolt-figure/src/figure.twig
@@ -39,5 +39,5 @@
 </bolt-{{ componentName }}>
 
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-figure/figure.schema.yml', _self) }}
+  {{ validate_data_schema('@bolt-components-figure/figure.schema.yml', _self) | raw }}
 {% endif %}
