--- a/packages/components/bolt-link/src/link.twig
+++ b/packages/components/bolt-link/src/link.twig
@@ -46,5 +46,5 @@
 
 {% if enable_json_schema_validation %}
   {# disabling schema validation for now as it has too many errors now #}
-  {#{{ validate_data_schema('@bolt-components-link/link.schema.yml', _self) }}#}
+  {#{{ validate_data_schema('@bolt-components-link/link.schema.yml', _self) | raw }}#}
 {% endif %}
