--- a/packages/components/bolt-nav-bar/src/nav-bar.twig
+++ b/packages/components/bolt-nav-bar/src/nav-bar.twig
@@ -143,5 +143,5 @@
 </bolt-{{ componentName }}>
 
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-nav-bar/nav-bar.schema.yml', _self) }}
+  {{ validate_data_schema('@bolt-components-nav-bar/nav-bar.schema.yml', _self) | raw }}
 {% endif %}
