--- a/packages/components/bolt-ordered-list/ordered-list.twig
+++ b/packages/components/bolt-ordered-list/ordered-list.twig
@@ -44,5 +44,5 @@
 </bolt-{{ componentName }}>
 
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-ordered-list/ordered-list.schema.yml', _self) }}
+  {{ validate_data_schema('@bolt-components-ordered-list/ordered-list.schema.yml', _self) | raw }}
 {% endif %}
