--- a/packages/components/bolt-tooltip/src/tooltip.twig
+++ b/packages/components/bolt-tooltip/src/tooltip.twig
@@ -49,5 +49,5 @@
 <{{ customElementName }} {{ attributes }}></{{ customElementName }}>
 
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-tooltip/tooltip.schema.yml', _self) }}
+  {{ validate_data_schema('@bolt-components-tooltip/tooltip.schema.yml', _self) | raw }}
 {% endif %}
